--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,3 +23,80 @@
   background: url(../img/image3.jpg);
   background-size: cover;
 }
+
+#home-heading {
+  position: relative;
+  min-height: 200px;
+  color: #ffffff;
+  background: url("../img/lights.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  // background-size: cover;
+  .dark-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba($color: #000000, $alpha: 0.7);
+  }
+}
+
+#video {
+  position: relative;
+  min-height: 200px;
+  color: #ffffff;
+  background: url("../img/media.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  .dark-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba($color: #000000, $alpha: 0.7);
+  }
+
+  a {
+    color: white;
+  }
+
+}
+
+#footer {
+  color: white;
+
+}
+
+#footer-final {
+  background: black;
+  color: #ffffff;
+}
+
+#head {
+  position: relative;
+  background: url("../img/image1.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #ffffff;
+  min-height: 200px;
+  // padding-top: 100px;
+  .dark-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba($color: #000000, $alpha: 0.7);
+  }
+}
+
+#about {
+  img {
+    margin-top: -50px;
+    
+  }
+}
+
