add contact.html & blog.html pages

--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,14 @@
   color: white;
 }
 
-#footer-final {
+#footer-final,
+#main-footer {
   background: black;
   color: #ffffff;
 }
 
-#head {
+#head,
+#page-header-blog {
   position: relative;
   background: url("../img/image1.jpg");
   background-attachment: fixed;
@@ -79,7 +81,8 @@
   color: #ffffff;
   min-height: 200px;
 }
-#head .dark-overlay {
+#head .dark-overlay,
+#page-header-blog .dark-overlay {
   position: absolute;
   top: 0;
   left: 0;
