--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,15 +66,16 @@
 
 #footer {
   color: white;
-
 }
 
-#footer-final {
+#footer-final,
+#main-footer {
   background: black;
   color: #ffffff;
 }
 
-#head {
+#head ,
+#page-header-blog {
   position: relative;
   background: url("../img/image1.jpg");
   background-attachment: fixed;
@@ -96,7 +97,6 @@
 #about {
   img {
     margin-top: -50px;
-    
   }
 }
 
